added views and routes

--- a/views/bfast.html
+++ b/views/bfast.html
@@ -7,5 +7,8 @@
 <body>
 <h1>Breakfast Options</h1>
 <a href="breakfast/green-eggs">Green Eggs and Ham</a>
+<br>
+<a href="breakfast/pancakes">Pancakes</a>
+
 </body>
 </html>
