added order functionality

--- a/views/home.html
+++ b/views/home.html
@@ -8,8 +8,8 @@
 <body>
 <h1>Welcome to my food page.</h1>
 <div class="container">
-    <img src="images/salmon.jpg" alt="salmon">
+    <img src="/328/food/images/salmon.jpg" alt="salmon">
 </div>
-
+<a href="order">Place an Order</a>
 </body>
 </html>
