--- a/views/greenEggsAndHam.html
+++ b/views/greenEggsAndHam.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Welcome to my Green eggs and ham page.</h1>
 <div class="container">
-    <img src="../images/cured-ham.jpg" alt="">
+    <img src="/328/food/images/cured-ham.jpg" alt="">
 </div>
 </body>
 </html>
