--- a/views/pancakes.html
+++ b/views/pancakes.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Welcome to my pancakes page.</h1>
 <div class="container">
-    <img src="../images/pancakes.jpg" alt="">
+    <img src="/328/food/images/pancakes.jpg" alt="">
 </div>
 </body>
 </html>
