added views, edited orders

--- a/views/bfast.html
+++ b/views/bfast.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Breakfast</title>
+    <include href="includes/header.html"></include>
 </head>
 <body>
 <h1>Breakfast Options</h1>
