--- a/views/greenEggsAndHam.html
+++ b/views/greenEggsAndHam.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Green Eggs and Ham</title>
     <link rel="stylesheet" href="../styles/myStyles.css">
+    <include href="includes/header.html"></include>
 </head>
 <body>
 <h1>Welcome to my Green eggs and ham page.</h1>
