--- a/views/pancakes.html
+++ b/views/pancakes.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>Green Eggs and Ham</title>
     <link rel="stylesheet" href="../styles/myStyles.css">
+    <include href="includes/header.html"></include>
 </head>
 <body>
 <h1>Welcome to my pancakes page.</h1>
