--- a/views/home.html
+++ b/views/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Food Home</title>
     <link rel="stylesheet" href="styles/myStyles.css">
+    <include href="includes/header.html"></include>
 </head>
 <body>
 <h1>Welcome to my food page.</h1>
